--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 
 .logo {
     height: 35px;
-    width: 100px;
+    width: 110px;
 }
 
 .main-nav {
@@ -224,10 +224,12 @@ html {
 
 /* sign up section */
 #sign-up {
+    top: -400px;
     width: 55%;
     margin: auto;
     margin-top: 100px;
     text-align: center;
+
 }
 .sign-up_content {
     background-color: hsl(217, 28%, 15%);
@@ -265,8 +267,44 @@ html {
     outline: none;
     margin-left: 18px;
     background-color: hsl(176, 68%, 64%);
-
-
 }
 
 /* end of sign up section */
+
+
+/* footer section */
+section #footer{
+    margin-top: 50px;
+    background-color:  hsl(216, 53%, 9%);
+}
+.footer_content{ 
+    padding: 170px 0;
+    width: 85%;
+    margin: auto;
+}
+.footer_content .footer_logo img{
+    height: 35px;
+    width: 110px;
+    margin-bottom: 30px;
+    display: flex;
+}
+.footer_location{
+    display: flex;
+    max-width: 300px;   
+    justify-items: flex-start;
+}
+.footer_location img{
+    height: 25px;
+    width: auto;
+    margin-left: 10px;
+}
+.footer_location p{
+    margin-left: 20px;
+}
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+/* end of footer */
