--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ html {
     margin: 30px 0;
     width: 50%;
     margin: auto;
+    padding-bottom: 15px;
 }
 
 .main-texts p {
@@ -142,24 +143,25 @@ html {
 /* productivity section */
 #productivity {
     width: 85%;
-    margin: 0 auto;
+    margin:  auto;
 }
 .productivity_content {
     display: flex;
     flex-direction: row;
-    /* align-items: center; */
+    flex-wrap: wrap;
 }
 #productivity .productivity_image img {
     /* width: 100%; */
     padding-right: 40px;
+    width: 95%;
     height: auto;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 #productivity .productivity_text {
     margin-top: 40px;
     display: flex;
-    justify-items: flex-start;
-    margin-left: 20px;
+    align-content: flex-start;
+    margin-left: 10px;
 }
 .productivity_texts h1 {
     font-size: 30px;
@@ -167,7 +169,7 @@ html {
     margin-bottom: 30px;
 }
 .productivity_texts p {
-    width: 95%;
+    width: 455px;
     margin: auto;
     display: flex;
     justify-items: flex-start;
@@ -175,6 +177,9 @@ html {
 }
 .productivity_texts a {
     color: hsl(176, 68%, 64%);
+    text-decoration: none;
+    border-bottom: 2px solid hsl(176, 68%, 64%);
+    padding: 6px 0;
 }
 
 /* end of productivity section */
@@ -279,7 +284,7 @@ section #footer{
 }
 .footer_content{ 
     padding: 170px 0;
-    width: 85%;
+    width: 90%;
     margin: auto;
 }
 .footer_content .footer_logo img{
@@ -290,11 +295,17 @@ section #footer{
 }
 .footer_location{
     display: flex;
-    max-width: 300px;   
+    max-width: 400px;   
     justify-items: flex-start;
+    padding: 50px;
+
+}
+.footer_location:first-of-type, 
+.container:first-of-type{
+    padding-left: 0;
 }
 .footer_location img{
-    height: 25px;
+    height: 20px;
     width: auto;
     margin-left: 10px;
 }
@@ -305,6 +316,35 @@ section #footer{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+}
+.phone ,.email {
+    display: flex;
+    padding: 10px 0;
+}
+.phone img, .email img{
+    height: 15px;
+    width: auto;
+}
+.links li {
+    list-style: none;
+    padding-bottom: 15px;
+    
+    /* padding-top: 0; */
+}
+.links li a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: 300;
+    
+}
+.social-links {
+    color: #fff;
+    display: flex;
+    
+}
+.social-links i {
+    padding: 0 15px;
+
 }
 
 /* end of footer */
