--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,14 @@ html {
     border-bottom: 2px solid hsl(176, 68%, 64%);
     padding: 6px 0;
 }
+.arrow{
+    display: flex;
+    align-content: center;
+}
+.productivity_texts .arrow img{
+    width: auto;
+    height: 25px
+}
 
 /* end of productivity section */
 
@@ -303,7 +311,7 @@ section #footer{
     padding-left: 20px;
 }
 .footer_location img{
-    height: 20px;
+    height: 18px;
     width: auto;
     margin-left: 10px;
 }
