--- a/css/style.css
+++ b/css/style.css
@@ -234,11 +234,12 @@ html {
 
 /* sign up section */
 #sign-up {
-    /* top: -400px; */
+    top: -400px;
     width: 55%;
     margin: auto;
     margin-top: 100px;
     text-align: center;
+    z-index: 100;
 }
 .sign-up_content {
     background-color: hsl(217, 28%, 15%);
@@ -290,6 +291,7 @@ section #footer{
     width: 100%;
     margin: auto;
     background-color:  hsl(216, 53%, 9%);
+    z-index: 50;
 }
 .footer_content .footer_logo img{
     height: 35px;
@@ -350,10 +352,23 @@ section #footer{
 .social-links {
     color: #fff;
     display: flex;
-    
+    font-size: 20px;
 }
 .social-links i {
     padding: 0 15px;
+}
+.social-links div{
+    color: #fff;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    font-size: 120%;
+    margin-right: 25px;
+
 }
 
 /* end of footer */
