--- a/css/querries.css
+++ b/css/querries.css
@@ -9,10 +9,25 @@
 
 
 }
+@media only screen and (max-width: 749px) {
+
+
+}
 
 @media only screen and (max-width: 768px) {
-
-
+.search_bar {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.searchbar_2 button {
+    display: flex;
+    padding: 14px 120px;
+}
+#productivity .productivity_image img {
+    padding-right: 0px;
+    width: 90%;
+    height: auto;
 }
 
 @media only screen and (max-width: 480px) {
@@ -143,7 +158,7 @@
 .social-links i{
     text-align: center;
 }
-
+}
 }
 
 
