--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,6 @@ html {
 
 /* sign up section */
 #sign-up {
-    top: -400px;
     width: 55%;
     margin: auto;
     margin-top: 100px;
@@ -270,6 +269,7 @@ html {
     margin-bottom: 40px;
 }
 .searchbar_2 button {
+    width: auto;
     display: flex;
     padding: 14px 50px;
     border-radius: 60px;
