--- a/css/style.css
+++ b/css/style.css
@@ -195,8 +195,7 @@ html {
     margin-right: 30px;
     margin-left: 30px;
     padding: 0 10px 0 10px;
-    margin-top: 150px;
-    z-index: 3;
+ 
 }
 .testimonial_content {
     display: flex;
@@ -204,6 +203,8 @@ html {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 30px;
+    margin-top: 150px;
+   
 }
 .testimonial_box {
     width: 400px;
@@ -212,6 +213,7 @@ html {
     background-color: hsl(219, 30%, 18%);
     border-radius: 5px;
     margin-bottom: 40px;
+    z-index: 60;
 }
 .testimonial_box .box_2 {
     margin: 0 10px 0 10px;
@@ -230,8 +232,18 @@ html {
     align-items: center;
 }
 .blockquote_text{
+    position: relative;
+    margin: 0.5em;
+    /* padding: 0.5em 2em 0.5em 3em; */
+    z-index: 50;
+}
+.blockquote_text::before{
     color: hsl(176, 68%, 64%);
-    font-size: 15px;
+    font-size: 215px;
+    position: absolute;
+    top: -75px;
+    left: 0;
+    content: "\201C";
 }
 
 /* end of testimonial section */
