--- a/css/querries.css
+++ b/css/querries.css
@@ -13,13 +13,19 @@
 
 
 }
+@media only screen and (max-width: 910px) {
+    .signup-texts > p {
+        margin-bottom: 20px;
+    }
+}
 
 @media only screen and (max-width: 768px) {
 .search_bar {
     max-width: 100%;
     display: flex;
     flex-direction: column;
-}
+    
+} 
 .searchbar_2 button {
     display: flex;
     padding: 14px 120px;
@@ -28,6 +34,11 @@
     padding-right: 0px;
     width: 90%;
     height: auto;
+}
+.signup-texts > p {
+    width: 500px;
+    margin-bottom: 10pz
+
 }
 
 @media only screen and (max-width: 480px) {
@@ -115,17 +126,24 @@
 }
 #sign-up {
     /* top: -400px; */
-    width: 90%;
-    margin: auto;
     margin-top: 100px;
-    text-align: center;
+    background-color: hsl(217, 28%, 15%);
+    padding: 30px 0px;
 }
-.sign-up_content h1 {
-    padding-top: 35px;
+.sign-up_content {
+    width: 100%;
+    margin-left: 0;
+    
+}
+.signup-texts{
+    
+    margin:0 10px;
+}
+.signup-texts h1 {
     font-size: 22px;
     margin-bottom: 30px;
 }
-.sign-up_content p {
+.signup-texts p {
     width: 100%;
     margin: auto;
 }
@@ -140,13 +158,13 @@
     padding: 15px 55px;
 
 }
-.searchbar_2 button {
+.searchbar_2 .btn {
     display: flex;
     padding: 14px 70px;
-    border-radius: 60px;
+    border-radius: 0px;
     border: none;
     outline: none;
-    margin-left: 18px;
+    /* margin-left: 18px; */
     background-color: hsl(176, 68%, 64%);
 }
 .footer_content .footer_logo img{
