--- a/css/style.css
+++ b/css/style.css
@@ -261,51 +261,74 @@ button, .btn:hover{
 
 /* sign up section */
 #sign-up {
-    width: 55%;
-    margin: auto;
     margin-top: 100px;
-    text-align: center;
-    z-index: 100;
+    background-color: hsl(217, 28%, 15%);
+    padding: 30px 0px;
 }
 .sign-up_content {
-    background-color: hsl(217, 28%, 15%);
+    width: 100%;
+    margin:  20px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
 }
-.sign-up_content h1 {
-    padding-top: 25px;
+.signup-texts{
+    width: auto;
+    margin-left: 50px;
+}
+.form-content{
+    margin-left: 20px;
+    display: flex;
+    /* flex-direction: column; */
+ }
+.signup-texts h1 {
     font-size: 30px;
     margin-bottom: 30px;
 }
-.sign-up_content p {
-    width: 90%;
-    margin: auto;
+.signup-texts > p {
+    width: 400px;
+    margin: auto
 }
+
 .search_bar {
-    max-width: 95%;
-    margin: 0 auto;
+    margin: 0 30px;
+    margin-top: 5px;
     display: flex;
-    margin-top: 30px;
+    flex-wrap: wrap;
+    justify-items: flex-start;
+    flex-direction: column;
+    
+    /* flex-direction: column; */
+
 }
 .searchbar_1>input[type=text] {
-    padding: 15px 110px;
+    padding: 15px 90px;
     text-decoration: none;
-    border-radius: 200px;
+    border-radius: 0px;
     background-color: #fff;
     color: #f4f4f4;
     border: none;
     outline: none;
-    margin-bottom: 40px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
-.searchbar_2 button {
-    width: auto;
-    display: flex;
-    padding: 14px 50px;
-    border-radius: 60px;
+.searchbar_2 > input[type=text] {
+    /* width: 18rem; */
+    padding: 13px 30px;
     border: none;
     outline: none;
+    text-align: center;
     margin-left: 18px;
     background-color: hsl(198, 60%, 50%);
 }
-button, .btn:hover{
+.searchbar_2 .btn{
+    border-radius: 0px;
+}
+.searchbar_2 > input[type=text]::placeholder{
+    color: white;
+}
+ .btn:hover{
     background-color: hsl(176, 68%, 64%);
 }
 /* end of sign up section */
@@ -323,8 +346,8 @@ section #footer{
     z-index: 50;
 }
 .footer_content .footer_logo img{
-    height: 35px;
-    width: 110px;
+    height: auto;
+    width: 120px;
     margin-bottom: 30px;
     display: flex;
     padding-left: 20px;
